Add evaluation methods

--- a/Few_shots.ipynb
+++ b/Few_shots.ipynb
@@ -511,8 +511,11 @@
    },
    "outputs": [],
    "source": [
-    "class Model(object):\n",
+    "class Model(nn.Module):\n",
     "    def __init__(self,config):\n",
+    "        \n",
+    "        super(Model,self).__init__()\n",
+    "        \n",
     "        self.config=config\n",
     "        self.losses = [] # A list to keep our losses\n",
     "        \n",
@@ -577,7 +580,7 @@
    },
    "outputs": [],
    "source": [
-    "def forward_pass(self,x): #Embedding\n",
+    "def forward(self,x): #Embedding\n",
     "        \n",
     "    # Embedding part 1\n",
     "    x = self.layer1(x)\n",
@@ -591,7 +594,7 @@
     "    return  embedding\n",
     "\n",
     "# Add method to the class\n",
-    "Model.forward_pass = forward_pass"
+    "Model.forward = forward"
    ]
   },
   {
@@ -712,7 +715,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def inference_mAP(self,batch_X,pos_positions,\n",
@@ -721,7 +726,7 @@
     "    batch_size = batch_X.shape[0]\n",
     "\n",
     "    # Embed the batch\n",
-    "    emb_X=self.forward_pass(batch_X)\n",
+    "    emb_X=self.forward(batch_X)\n",
     "\n",
     "    #As we are computing cosine similarity, we normalize the vectors\n",
     "    norms = torch.norm(emb_X,p=2,dim=1)  #.detach()\n",
@@ -930,11 +935,13 @@
     "    if self.config.optimizer==\"Adam\":\n",
     "        pass\n",
     "    optimizer = torch.optim.Adam(\n",
-    "        chain(self.layer1.parameters(),\n",
-    "         self.layer2.parameters(),\n",
-    "         self.layer3.parameters(),\n",
-    "         self.layer4.parameters()),lr)\n",
-    "    optimizer.zero_grad()\n",
+    "        self.parameters(),lr)\n",
+    "#     optimizer = torch.optim.Adam(\n",
+    "#         chain(self.layer1.parameters(),\n",
+    "#          self.layer2.parameters(),\n",
+    "#          self.layer3.parameters(),\n",
+    "#          self.layer4.parameters()),lr)\n",
+    "#     optimizer.zero_grad()\n",
     "    mAP_score_std,mAP_score_aug,mAP_score_GT=model.inference(batch)\n",
     "    loss= model.compute_loss(mAP_score_std,mAP_score_aug,mAP_score_GT)\n",
     "    loss.backward()\n",
@@ -948,6 +955,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Next, we need a method to determine how well we are doing in the training process. \n",
+    "\n",
+    "# Evaluation\n",
+    "\n",
+    "We want to check how accurate the model is, we do this in two steps:\n",
+    "\n",
+    "- First we create the scores for every element in the batch. (eval_mAP method)\n",
+    "- Second: we compare how those scores compare with the real result. (apk method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_mAP(batch, model):\n",
+    "    imgs = batch[0]\n",
+    "    labels = batch[1]\n",
+    "    batch_size = len(labels)\n",
+    "    \n",
+    "    pos_positions, neg_positions, pos_sizes, neg_sizes = \\\n",
+    "        model.get_positive_negative_splits(batch)\n",
+    "    \n",
+    "    batch_X_tensor = torch.from_numpy(imgs).float()\n",
+    "    batch_X_tensor = Variable(batch_X_tensor,\n",
+    "                                             requires_grad=False)\n",
+    "\n",
+    "    emb_X = model.forward(batch_X_tensor)\n",
+    "    \n",
+    "    query_APs =[]\n",
+    "    \n",
+    "    for i in range(batch_size):\n",
+    "\n",
+    "        current = emb_X[i]\n",
+    "        \n",
+    "        current_num_positive = int(pos_sizes[i])\n",
+    "        current_num_negative = int(neg_sizes[i])\n",
+    "        \n",
+    "        # We need at least a negative sample\n",
+    "        if current_num_negative==0:\n",
+    "            continue        \n",
+    "        \n",
+    "        positive_for_current = \\\n",
+    "            emb_X[pos_positions[i][:current_num_positive],:]\n",
+    "            \n",
+    "        negative_for_current = \\\n",
+    "            emb_X[neg_positions[i][:current_num_negative],:]\n",
+    "            \n",
+    "        # Compute similarities\n",
+    "        S_pos = torch.matmul(current,positive_for_current.t())\n",
+    "        S_neg = torch.matmul(current,negative_for_current.t())\n",
+    "\n",
+    "        # sorts the values of the similarities\n",
+    "        phi_pos, _ = S_pos.sort()\n",
+    "        phi_neg, _ = S_neg.sort()\n",
+    "        \n",
+    "        y_true = torch.cat([torch.ones(phi_pos.shape[0]),torch.zeros(phi_neg.shape[0])])\n",
+    "        \n",
+    "        y_scores = torch.cat([phi_pos,phi_neg])\n",
+    "        \n",
+    "        AP = apk(y_true,y_scores)\n",
+    "        \n",
+    "        query_APs.append(AP)\n",
+    "        \n",
+    "    return sum(query_APs)/(1+len(query_APs))\n",
+    "\n",
+    "def apk(y_true,y_scores):\n",
+    "    \"\"\"Computes average precision between to list of items\"\"\"\n",
+    "    \n",
+    "    ranks = y_scores.sort(descending=True)[1].data\n",
+    "\n",
+    "    actual = y_true[ranks]\n",
+    "    predicted = y_scores[ranks]\n",
+    "    \n",
+    "    score = 0\n",
+    "    num_hits = 0\n",
+    "    \n",
+    "    for i, p in enumerate(y_scores):\n",
+    "        if y_true[i]:\n",
+    "            num_hits+=1\n",
+    "            score+=num_hits/(i+1)\n",
+    "    num_relevant = y_true.sum()\n",
+    "    \n",
+    "    if num_relevant>0:\n",
+    "        AP = score/num_relevant\n",
+    "    else:\n",
+    "        AP = None\n",
+    "    \n",
+    "    return AP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.75"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#testing cell\n",
+    "configDLM= ConfigDLM()\n",
+    "model = Model(configDLM)\n",
+    "batch=get_batch(3,4,'train')\n",
+    "model.train_step(batch)\n",
+    "eval_mAP(batch,model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running \n",
+    "\n",
     "We then instiatate our config and our model "
    ]
   },
@@ -973,22 +1128,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 of 20\r"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "EPOCHS=20\n",
-    "for i in range(EPOCHS):\n",
-    "    print('Epoch %d of %d'%(i+1,EPOCHS),end='\\r')\n",
-    "    batch=get_batch(128,16,'train')    \n",
-    "    model.train_step(batch)\n"
+    "SKIP = True\n",
+    "if not SKIP:\n",
+    "    EPOCHS=20\n",
+    "    for i in range(EPOCHS):\n",
+    "        print('Epoch %d of %d'%(i+1,EPOCHS),end='\\r')\n",
+    "        batch=get_batch(128,16,'train')    \n",
+    "        model.train_step(batch)\n"
    ]
   },
   {
@@ -999,8 +1150,8 @@
    },
    "outputs": [],
    "source": [
-    "model.losses\n",
-    "asdas"
+    "if not SKIP:\n",
+    "    plt.plot(model.losses)"
    ]
   },
   {
@@ -1012,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -1027,24 +1178,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 999\r"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1000):\n",
-    "    model.train_step(batch)\n"
+    "    print(\"Epoch %d\"%i,end=\"\\r\")\n",
+    "    model.train_step(batch)\n",
+    "    model.losses.append(eval_mAP(get_batch(3,4,'val'),model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAD8CAYAAABn919SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAG4BJREFUeJzt3Xt8VPWd//HXJyGAioxBggIKUW6K\nyq0BgljbqhVxXS+7q9Ztqbbu4m9/+ljd7Vpt3V1HWW3Vaq2rq4tXbK22Xa9r1UrVaqsJGO7INShW\nLkK4CCjXJN/9Y07CEDKZ+5w5J+/n45FHJt85c84758y8Mzlnzow55xARkeAr8TuAiIjkhgpdRCQk\nVOgiIiGhQhcRCQkVuohISKjQRURCQoUuIhISKnQRkZBQoYuIhESXQi6sd+/errKyspCLFBEJvDlz\n5mxyzlUkm66ghV5ZWUldXV0hFykiEnhm9nEq02mXi4hISKjQRURCQoUuIhISKnQRkZBQoYuIhIQK\nXUQkJFToIiIhEZhCr3vpIT7fvtXvGCIiRSsQhb5i7ttUzb2BZY/8nd9RRESKViAKfe+u7QAcsnuj\nz0lERIpXIApdRESSU6GLiISECl1EJCQCUeiuqdnvCCIiRS8QhR75ww/8jiAiUvQCUeiNlAFw0t6F\nPicRESlegSj0ppIyvyOIiBS9QBR6o6nQRUSSCUShN5V09TuCiEjRC0ah6xm6iEhSgSj0Zu1DFxFJ\nKmmhm9mxZvaWmS01sw/M7FpvPGpma81svvd1bv5iWv5mLSISEl1SmKYR+J5zbq6ZHQ7MMbOZ3nU/\ndc79JH/xREQkVUkL3Tm3HljvXd5hZkuB/vkOJiIi6UlrH7qZVQKjgVne0DVmttDMHjOz8gS3mWpm\ndWZW19DQkFVYERFJLOVCN7MewLPAdc657cCDwCBgFLFn8He3dzvn3HTnXJVzrqqioiKzlLZ/H/qc\n3z6S2TxEREIupUI3szJiZf6Uc+45AOfcBudck3OuGXgYGJe/mPs1fvReIRYjIhI4qbzKxYBHgaXO\nuXvixvvGTXYRsDj38Q42dNPrhViMiEjgpPIql4nAFGCRmc33xn4IXGZmowAHrAauykvCNsrZUYjF\niIgETiqvcvkT7b8Q/JXcxxERkUwF4kxRpxOLRESSCkShi4hIcip0EZGQUKGLiISECl1EJCQCUug6\nKCoikkxACl1ERJJRoYuIhEQgC33BW7/xO4KISNEJRqG32YW+Z/Mn/uQQESliwSj0Npo31fsdQUSk\n6ASy0Ks/fcrvCCIiRSeQhS4iIgdToYuIhERACl0nFomIJBOQQhcRkWRU6CIiIaFCFxEJicAWumtu\n9juCiEhRCUSht/cRdPUL3/UhiYhI8QpEobenad8evyOIiBSV4Bb6XhW6iEi8wBZ6jzdu8DuCiEhR\nCUah28H70Ac26x0XRUTiBaPQRUQkKRW6iEhIqNBFREIiaaGb2bFm9paZLTWzD8zsWm+8l5nNNLOV\n3vfy/McVEZFEUnmG3gh8zzl3IlANXG1mw4EbgTecc0OAN7yf80TvtigikkzSQnfOrXfOzfUu7wCW\nAv2BC4AZ3mQzgAvzFTKRPbt3FnqRIiJFK6196GZWCYwGZgFHOefWQ6z0gT65DpfMPp1cJCLSKuVC\nN7MewLPAdc657WncbqqZ1ZlZXUNDQyYZRUQkBSkVupmVESvzp5xzz3nDG8ysr3d9X2Bje7d1zk13\nzlU556oqKioyCtnem3MB7NuzO6P5iYiEUSqvcjHgUWCpc+6euKteAi73Ll8OvJj7eB1b8fT3C71I\nEZGi1SWFaSYCU4BFZjbfG/sh8GPg12Z2JfBn4OL8REys+871hV6kiEjRSlrozrk/kfh1g2fmNo6I\niGQq0GeKlrp9fkcQESkawSj0dt5tEeDkPfPbHRcR6YyCUegiIpKUCl1EJCRU6CIiIaFCFxEJCRW6\niEhIqNBFREJChS4iEhIqdBGRkAhIoSf+xCLX3FzAHCIixSsghZ7Y3Fcf8zuCiEhRCHyh79240u8I\nIiJFIfCFLiIiMSp0EZGQCEShuwTvtigiIvsFotBFRCQ5FbqISEgEvtDLttb7HUFEpCgEpNAT70Ov\n2v579u7ZXcAsIiLFKSCF3rG9t1f6HUFExHehKPQetsvvCCIivgtFoQPs2b3T7wgiIr4KTaFvWveR\n3xFERHwVkEJPfmJR/ydPhWiEJbWvFSCPiEjxCUihp274a5eybfMGv2OIiBRc6AodIPKfQ/2OICJS\ncEkL3cweM7ONZrY4bixqZmvNbL73dW5+Y2YgGmFrw3q/U4iIFEwqz9CfAM5pZ/ynzrlR3tcruY2V\nG+UPnMDs+77ldwwRkYJIWujOuXeALQXIklgW77Y4bsv/QjTC7GfvpamxMYehRESKSzb70K8xs4Xe\nLpnynCXKk3GLbqb0P46EaIRtWzcB0NzUxII3n6H2qVvY/tlmnxOKiGSnS4a3exCYBjjv+93Ad9ub\n0MymAlMBBgwYkOHicivys0FA7K/ZyJbBe+8BoPaYKxn3nbsoKS31JZuISKYyKnTnXOvrAs3sYeDl\nDqadDkwHqKqqcpksr5Cq1zwK0x7tcJpmZzRjdLFmAHa6bqw4bAz7hp3P0NMvIVLeuxBRRUQOkFGh\nm1lf51zLS0guAhZ3NH22XAonFhVSiTlK2P+36VDbw6idNTCvBub9ICfL2M6hrC2rZHvPIbjeJ9Bj\nwCkcPWgkvSr6678HEWlX0kI3s6eBrwK9zWwNcDPwVTMbRWyXy2rgqjxm7JR6spOe+5bA5iWw+UVY\nDsxMfz6fu0OoP2wUu/qM4rDKsfQ7YRxH9umPlYTyFASRTi1poTvnLmtnuON9ElI0etiu2H8Pq2tg\n9YPwh/Ruv4kjWHPoieyqGEmP48czYMTp9Iz00h8EkSKU6UFR6SR68xm9d9bAxzXw8UPwVuq3rS8d\nxOYjTqF0YDV9TphAv+OG06Wsa/7CinRyKnTJm8FNqxi8eRVsfgHmdjztVnqy7LgpDP76VCr6VRYk\nn0jYqNClKJSznQkfPQDTHzhgvL50EHbB/QwacapPyUSCQ4UuRW1w0yp4bjI8t39sCz1ZXT2NU864\njLKu3fwLJ1JkVOgSOL3YTq/aa6H22gPGl3Q9BTvz3xhWdZZe2imdkgpdQmP43kXw6iXw6oHjH5cc\ny+bxNzDijEt1UFZCTYUuoTew+RMG1lwDNdccdF3NgKsYcu419D66ON6WQiQbwSj0LN5tUaQjE/78\n3/DQfx80XtfzLPr91e30qxzmQyqRzASj0EUKrGr77+GJ3x8wttuVsXjs7YyadIV23UhRUqGLpKi7\n7aOq7nqou751bJ8rZVH13Yz8+hRKu+jhJP7SPVAkC2XWxJhZ18Gs61rHFp3xBCefdoHeHkEKLiCF\nrn3oEhynvHkFvBm7vOArjzDyaxf7mkc6Dz2FEMmjkW//HUQjEI2w7qNlfseRkFOhixRIvxnjIRqh\nZvo/4pqb/Y4jIaRCFymwCetmYLeWs+/mXuz6YoffcSREVOgiPimzJg6565jYB5dvafA7joRAMApd\nJxZJyEXuG6xil6wFo9BFOomWYteuGMmECl2kCLXsitmze6ffUSRAVOgiRazbj/uy5pYTaNy31+8o\nEgCBKHSnE4ukEzvGrafLbRXMu3OyXu4oHQpEoYsIjN75HnZrOTWPfs/vKFKkVOgiATPhk0cgGqHu\n5el+R5Eio0IXCaiquushGmHZ7Jl+R5EioUIXCbgTXvkbiEZY//Fyv6OIz4JR6DqxSCSpvo+Pg2iE\n7Z9t9juK+CQYhS4iKet57/E03XyEXurYCanQRUKo1Jz3UsdzaW5q8juOFEjSQjezx8xso5ktjhvr\nZWYzzWyl9708vzFFJBOjd75LybRe1D59m99RpABSeYb+BHBOm7EbgTecc0OAN7yfRaRIVS+/E6IR\nVs7/o99RJI+SFrpz7h1gS5vhC4AZ3uUZwIU5ztWGDoqK5MKQF87TgdMQy3Qf+lHOufUA3vc+iSY0\ns6lmVmdmdQ0NemtQkWLQ897j+fzmo3XgNGTyflDUOTfdOVflnKuqqKjI9+JEJEU9bBddbqug5tF/\n8TuK5Eimhb7BzPoCeN835i6SiBTShE8ehmiEVQvf8zuKZCnTQn8JuNy7fDnwYm7iiIhfBj03GaIR\nvtjxmd9RJEOpvGzxaaAGGGZma8zsSuDHwNfNbCXwde9nEQmBw+4eyMppX9Lr1wOoS7IJnHOXJbjq\nzBxnEZEiMaSpHqb14v1RtzP2wqv9jiMp0pmiIpLQ2Pk/hGiENfWLk08svlOhi0hSx/xiIkQj7N71\nhd9RpAPBKHQLRkyRsOt+Rz9m/+yb+ii8IqWmFJG0jNv6MnZrOUtn/c7vKNKGCl1EMnLiq5dANMK2\nLToDvFio0EUkK5H7BvNpdLB2wxQBFbqIZO1oGrBby6l9+na/o3RqKnQRyZnq5XdANMLaDz/wO0qn\npEIXkZzr/+SpEI2wd89uv6N0Kip0Ecmbrj86ivd/eqnfMToNFbqI5NXYba9BNMKCN5/xO0roBaTQ\n9YlFIkE38p2rIBphy8a1fkcJrYAUuoiERa//Gg7RCPv27vE7Suio0EXEF2W392H2vYnezFUyoUIX\nEd+M++wViEaY88rjfkcJBRW6iPjuS7Ovg2iEzRvW+B0l0IJR6KaDoiKdwZEPngTRCI379vodJZCC\nUegi0ql0ua2Cmoev9TtG4KjQRaQoTVj7BEQjLKl51e8ogaFCF5GiNvx334BohIZ1q/2OUvQCUehO\nJxaJdHoV00dCNMLOz7f5HaVoBaLQRURaHPqTAey9uZdOTGqHCl1EAqerNVF2ex/m3XkuzU1Nfscp\nGip0EQms0TvfpWRaL2qfutXvKEVBhS4igVe98m6IRpg/85d+R/FVMApdJxaJSApGvfsPEI2wYu7b\nfkfxRTAKXUQkDUNfOh+iEVYtqvU7SkFlVehmttrMFpnZfDOry1UoEZFcGPTsJIhG+KR+kd9RCqJL\nDubxNefcphzMR0QkL479xWkAbL16GeUVfX1Okz/a5SIinUb5AydANMLunZ/7HSUvsi10B7xuZnPM\nbGouArVPB0VFJHe639mfVdNG4Zqb/Y6SU9kW+kTn3BhgMnC1mZ3edgIzm2pmdWZW19DQkOFiXFYh\nRUTaGtT0EXZrOTWP3+B3lJzJqtCdc+u87xuB54Fx7Uwz3TlX5ZyrqqioyGZxIiI5N+Hjh2KvYX/j\nGb+jZC3jQjezw8zs8JbLwNnA4lwFExEppFF/vAqiEVbO/6PfUTKWzTP0o4A/mdkCYDbwW+fca7mJ\n1Zb2oYtIYQx54TyIRvhoyft+R0lbxi9bdM59CIzMYRYRkaJx3K/PAqD+ot8yeORpPqdJTUBetqiD\noiLij8HP/wVEIyx863/8jpJUQApdRMRfI96+EqIRZv3qDr+jJKRCFxFJw/ilt0M0wvs/vZSmxka/\n4xwgIIWug6IiUlzGbnuN0v84EqIRPt++1e84QGAKXUSkePW4pxKiERa8+WtfcwSk0HVQVESK38h3\n/h6iEXbcfDTbtmR6ZnzmcvFuiyIiEudw2wX3DQZgdvl5jPn/j9OlrGvelxuQZ+jahy4iwTRu68t0\nua2CzzZ9mvdlBaTQRUSCbc3y/J95qkIXEQmJgBS6DoqKiCQTkEIXEZFkAlLoOigqIpJMQApdRESS\nUaGLiBSCy/+xwIAUug6KiogkE5BCFxEJOMv/scCAFLoOioqIJBOQQhcRkWRU6CIihaCDoiIikioV\nuohIIeigqIhISGiXi4hIOLhmFbqISDi4prwvIhCF3vW4CX5HEBHJimtuzvsyAvGZomMmf4flFQPZ\nufmT2ICV4pzDaMZRgpnt/+uX5XVjaq4BoHbo9VSvuAuAeac+0OHtRr93NQBzJ9zfevsWcyfcf8Dt\nWqadNfwmyiJ9U8rZMs95E+5rva5k/i8YtauW7RzGqgk/AmDoe9/nMNvNvEMn4kZext4tn1C9/I52\nf4f25pnx+lzwS0bvfI8d7hDqT40tb3TNP7bOP/52h77/XwxrXMYaO5qG6h8mnWdrxgTXtZh36gOt\n67bl531LX2Xc1pcP2A7xuVJd1+lso/a2e8t1s8vPo+zEyQmX15KtxZyxd1PSpSz17dDhNnqa0Tvf\n5QvXnRWn3tm6rLb3z5bbJdp+B9wuhXnu27ae8Utua/c+GP94aN1ubZbXve4hTty3hHV2FBuqb8r6\n8b53+UzGb37hgGXW9Luc7pXjWqfFSmNXuKaDctYOvZ6uRw48YJ7xvdF2fTrnaNq1nZKuhzJ41FfJ\nt6wK3czOAX4GlAKPOOd+nJNU7RhWdUa+Zn0gb8MMnHgxrLiLT6lg9Nnf6vg23sYeM2lK6+1bjJk0\n5YCfN713E735jEGnXUrvfgPTyjR60uWtQ7N3boUFtSw/4nTGeuN1H/wvVdtn0jjsPMZOmsKnn9TD\n8jvYwJEH/w7tzDNT7+/aBvPfY1lcFrwHd9v5125cBauWseaoM6nuYNkt82xvHi3XfdB1JCftXbD/\n9/O2Q33pIEaf/S0WlHWDt19mYfex+7dDglytMlwvC+fNYMTu/R8xFr/dW67rNuJCRn7t4sTLa1Po\nJ5/5t3TrfmhaORJ5f/cOmPcuSyNfpipuWW3vn/tzJVhPcbdLZZ6b1n0MS25jE0e0/zhqU+gH3V8a\nPoL6Jfy5zxkd3l9Staj7YfDmCyzqNpruTZ8zpHElR1b9NUPHfKXD2336XpSjaWDgxIvpO3DYwRN4\n2zHh+iyQjHe5mFkp8AAwGRgOXGZmw3MVTERE0pPNPvRxQL1z7kPn3F7gGeCC3MQSEZF0ZVPo/YFP\n4n5e442FgpXE9qPtLema0/nusW6xCyXZnWRQUhrbt9pcUtY61lway2qlsT1pJS2/Q8sy88S8LC4u\nS0JeRlfa8bTWwfUt1zWWxn6vtr9fY0ns5xJvPTSlkitLTR3cT1qua9kefmi5T7TcRwo2z5JYxWR8\nH2y5byW5v6Sq5XHdVNKNfV4mK0leg3u8+5RZcb+OJJt96O010kEvtDSzqcBUgAEDBmSxuMKYM+5e\nyg45nFP6H09N5T8w4PTk++0WfOURmnZ/zhhg8ZlP0uOtm9gy/gb2bvkz1W0nnvI8te88RfXRqa+L\nxWf9nN1b1lEVNzbynO9Ss34xwy+5pXVs2JSfUfObcsZOugKAir4DE/4OtcO+T8XJZzIo5RSJjZx0\nBTXrFh6QZdbwf6V88DiGtpl21EX/RO2MdYz4xi10ZOSkK1i8+Jfs6HcabV/jFL+8mhd/0vr7LfjK\nI0T+eAvll/8CgJMmnk/N8isYev71rbedPXIah/cbxokJlpvpehl4xcPM+fk19P5iBTvO+BEnt7mu\n5sU7GX/awf/Axm/bWSf9G2U9j8ItfpZ9fUZQnaP95wCjJl1BzdpFDL/43wGoG3MH3Xv1OyBnvGWT\nf8OOtUsZ22b8w795nY0LZ1Ld3jy/dCfdy/seMM/eRx9LbeXVHHv6N9tdzvyJD+JcM40fvERzl+6M\nb3P96Iv+idon1jLismnp/srtGj7hL6hZ+h2G/OX3aG5qpOa1+6keMTHp7cqmPEvNHx6n+pj27xk1\nfb/NIdtWMionKTNnLsOzl8xsAhB1zk3yfv4BgHPuR4luU1VV5erq6jJanohIZ2Vmc5xzVcmmy+b/\nh/eBIWZ2nJl1Bb4BvJTF/EREJAsZ73JxzjWa2TXA74i9bPEx59wHOUsmIiJpyep16M65V4BXcpRF\nRESyUNyHbEVEJGUqdBGRkFChi4iEhApdRCQkVOgiIiGR8YlFGS3MrAH4OMOb9wY25TBOrihXepQr\nPcqVnmLNBdllG+icq0g2UUELPRtmVpfKmVKFplzpUa70KFd6ijUXFCabdrmIiISECl1EJCSCVOjT\n/Q6QgHKlR7nSo1zpKdZcUIBsgdmHLiIiHQvSM3QREelAIArdzM4xs+VmVm9mNxZwucea2VtmttTM\nPjCza73xqJmtNbP53te5cbf5gZdzuZlNynO+1Wa2yMtQ5431MrOZZrbS+17ujZuZ3edlW2hmY/KU\naVjceplvZtvN7Do/1pmZPWZmG81scdxY2uvHzC73pl9pZll/UnGCXHeZ2TJv2c+b2RHeeKWZ7Ypb\nbw/F3eZL3vav97Jn9TFYCXKlvd1y/XhNkOtXcZlWm9l8b7yQ6ytRP/h3H3POFfUXsbfmXQUcD3QF\nFgDDC7TsvsAY7/LhwApiH4gdBf6lnemHe/m6Acd5uUvzmG810LvN2J3Ajd7lG4E7vMvnAq8S+6Sp\namBWgbbdp8BAP9YZcDrEPkgq0/UD9AI+9L6Xe5fL85DrbKCLd/mOuFyV8dO1mc9sYIKX+VVgch5y\npbXd8vF4bS9Xm+vvBv7dh/WVqB98u48F4Rm6bx9G7Zxb75yb613eASyl489NvQB4xjm3xzn3EVBP\nLH8hXQDM8C7PAC6MG3/SxdQCR5hZ3zxnORNY5Zzr6GSyvK0z59w7wJZ2lpfO+pkEzHTObXHObQVm\nAufkOpdz7nXnXKP3Yy1wTEfz8LL1dM7VuFgrPBn3u+QsVwcSbbecP147yuU9y74EeLqjeeRpfSXq\nB9/uY0Eo9KL4MGozqwRGA7O8oWu8f5sea/mXisJndcDrZjbHYp/dCnCUc249xO5wQB+fskHsU6zi\nH2jFsM7SXT9+rLfvEnsm1+I4M5tnZm+b2Ze9sf5elkLkSme7FXp9fRnY4JxbGTdW8PXVph98u48F\nodBT+jDqvAYw6wE8C1znnNsOPAgMAkYB64n9yweFzzrROTcGmAxcbWandzBtQbNZ7GMJzwd+4w0V\nyzpLJFGOQq+3m4BG4ClvaD0wwDk3Gvhn4Jdm1rOAudLdboXenpdx4JOGgq+vdvoh4aQJMuQsWxAK\nfQ1wbNzPxwDrCrVwMysjtrGecs49B+Cc2+Cca3LONQMPs38XQUGzOufWed83As97OTa07Erxvm/0\nIxuxPzJznXMbvIxFsc5If/0ULJ93MOw84JvebgG8XRqbvctziO2fHurlit8tk5dcGWy3Qq6vLsBf\nAb+Ky1vQ9dVeP+DjfSwIhe7bh1F7++ceBZY65+6JG4/f93wR0HL0/SXgG2bWzcyOA4YQOxCTj2yH\nmdnhLZeJHVRb7GVoOUp+OfBiXLZve0faq4FtLf8W5skBz5yKYZ3FLS+d9fM74GwzK/d2N5ztjeWU\nmZ0D3ACc75zbGTdeYWal3uXjia2fD71sO8ys2ruffjvud8llrnS3WyEfr2cBy5xzrbtSCrm+EvUD\nft7HsjnKW6gvYkeHVxD7a3tTAZd7GrF/fRYC872vc4GfA4u88ZeAvnG3ucnLuZwsj6InyXY8sVcQ\nLAA+aFkvwJHAG8BK73svb9yAB7xsi4CqPGY7FNgMROLGCr7OiP1BWQ/sI/Ys6MpM1g+xfdr13td3\n8pSrnth+1Jb72UPetH/tbd8FwFzgL+PmU0WsYFcB9+OdKJjjXGlvt1w/XtvL5Y0/Afy/NtMWcn0l\n6gff7mM6U1REJCSCsMtFRERSoEIXEQkJFbqISEio0EVEQkKFLiISEip0EZGQUKGLiISECl1EJCT+\nD0PgJ2lWOAeJAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x181f2c4358>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "plt.plot(model.losses)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1181,7 +1353,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from qutip import *"
+   ]
   },
   {
    "cell_type": "code",
@@ -1190,7 +1364,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "num_units=3"
+   ]
   },
   {
    "cell_type": "code",
@@ -1199,7 +1375,27 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "H_M = sum([tensor([qeye(2)  if not (i==n) else sigmax() for i in range(num_units)] )for n in range(num_units) ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H_M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qeye(2)"
+   ]
   },
   {
    "cell_type": "code",
