--- a/Few_shots.ipynb
+++ b/Few_shots.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "So our goal, and the goal of the paper, is to build a new model to tackle the problem of learning from few samples. The main idea, as described in the paper, is to \"...extract as much information as possible from each training batch.\" \n",
     "\n",
-    "In order to accomplish the goal each data point will be understood as a query that ranks the remaining ones basted on its predicted relevance. \n",
+    "In order to accomplish the goal each data point will be understood as a query that ranks the remaining ones based on its predicted relevance. \n",
     "\n",
     "We collect the relevant definitions."
    ]
