--- a/Few_shots.ipynb
+++ b/Few_shots.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Mean Average Precision (mAP):** Given a collection of data points $\\chi=\\{x_1,\\ldots,x_n\\}$ with associated classes $c_1,\\ldots,c_n$ (no necessarily distinct). Let $\\mathcal{B} \\subset \\chi $ be a batch. The set Rel$^{x_i}$ consist of all the elements on the batch that have the same class as $x_i$ and after ranking them with respect to how relevant they are to $x_i$ we obtain an ordered list $O^{x_i}$ (with smallest indexes been more relevant), we compute\n",
+    "**Mean Average Precision (mAP):** Given a collection of data points $\\chi=\\{x_1,\\ldots,x_n\\}$ with associated classes $c_1,\\ldots,c_n$ (not necessarily distinct). Let $\\mathcal{B} \\subset \\chi $ be a batch. The set Rel$^{x_i}$ consist of all the elements on the batch that have the same class as $x_i$ and after ranking them with respect to how relevant they are to $x_i$ we obtain an ordered list $O^{x_i}$ (with smallest indexes been more relevant), we compute\n",
     "\n",
     "$$AP^{x_i}= \\sum_j \\frac{\\left|\\{k\\leq j \\colon O^{x_i}[k]\\in Rel^{x_i}\\}\\right|}{j*\\left|Rel^{x_i}\\right|}$$  \n",
     "\n",
